# Helix

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  check_dataset.py  check_model.py  check_pipeline.py  coverage.xml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml
api/: config.py  constants.py  context.py  docs.py  exceptions.py  feature_engineering.py  loader.py  logger.py  main.py  middleware.py  responses.py  schemas.py  services.py
api/routers/: health.py  predict.py
data/interim/: revenue_business_clean.csv
data/processed/: revenue_final_dataset.csv  revenue_final_dataset_v2.csv
notebooks/: 01_dataset_audit.ipynb  02_univariate_analysis.ipynb  03_categorical_analysis.ipynb  04_bivariate_analysis.ipynb  05_leakage_analysis.ipynb  06_correlation_analysis.ipynb  07_data_cleaning.ipynb  08_feature_engineering.ipynb  09_baseline_model.ipynb  10_boosting_models.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
scripts/: export_preprocessing_artifacts.py
src/helix/: pipeline_registry.py
streamlit/: Home.py
streamlit/assets/: style.css
streamlit/components/: api.py  cards.py  charts.py  metrics.py  recommendation.py  shap_helper.py  sidebar.py
streamlit/pages/: 1_Executive_Dashboard.py  2_Business_Analytics.py  3_Customer_Segmentation.py  3_Revenue_Prediction.py  4_AI_Prediction.py  (+4 more)
tests/: conftest.py  pytest.ini  requirements-test.txt  test_feature_engineering.py  test_health.py  test_predict.py
(+90 files in other folders)
